# nautilus_AItrader

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BAR_PERSISTENCE_IMPLEMENTATION.md  ChinesReadme.md  ENV_COMMENT_FIX.md  ENV_UPDATE_SUMMARY.md  ERROR_ANALYSIS.md  FEATURE_OCO_IMPLEMENTATION.md  FEATURE_PARTIAL_TAKE_PROFIT.md  FEATURE_STOP_LOSS_TAKE_PROFIT.md  FEATURE_TELEGRAM_REMOTE_CONTROL.md  FEATURE_TEST_STATUS.md  FEATURE_TRAILING_STOP.md  FINAL_RESTART_SUCCESS.md  GIT_WORKFLOW.md  MaintenanceDaily.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_BAR_PERSISTENCE.md  README.md  REDIS_INSTALLATION.md  REFERENCE.md  RELEASE_v1.0.1_NOTES.md  RESTART_SUMMARY.md  SECURITY.md  STRATEGY.md  STRATEGY_LOGIC.md  TELEGRAM_MONITOR_PLAN.md  TELEGRAM_SETUP.md  TELEGRAM_TROUBLESHOOTING.md  TIMEFRAME_CHANGE_SUMMARY.md  check_strategy_status.sh  debug_telegram_config.py  deepseek-trader.service  diagnose_telegram.py  main_live.py  monitor_redis.py  pyproject.toml  (+12 more)
.claude/skills/nautilustrader/: SKILL.md
configs/: strategy_config.yaml  telegram_config.yaml
docs/: TESTING_GUIDE.md
examples/: bar_persistence_integration.py
indicators/: __init__.py  technical_manager.py
strategy/: __init__.py  deepseek_strategy.py
tests/: README.md  manual_order_test.py  test_bracket_order.py  test_integration_mock.py  test_rounding_fix.py  test_strategy_components.py
utils/: __init__.py  bar_persistence.py  deepseek_client.py  oco_manager.py  sentiment_client.py  telegram_bot.py  telegram_command_handler.py
