[project]
name = "nautilus-aitrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nautilus-trader>=1.200.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]
